samples/_failures_safe/1761287638_e2a965_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1da976e.c: In function ‘parser_init’:
./samples/SAFE/__tmp_f1da976e.c:152:5: error: expected expression at end of input
  152 |     parser->current_token =
      |     ^~~~~~
./samples/SAFE/__tmp_f1da976e.c:152:5: error: expected declaration or statement at end of input
